[package]
name = "ViperServer"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
h3o = "0.9.4"
ort = "2.0.0-rc.11"
rstar = "0.12.2"
sqlx = "0.8.6"
tokio = { version =  "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.28.0"
zstd = "0.13.3"
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0.102"
toml = "1.0.3+spec-1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
fred = { version = "10.1.0", features = ["i-redis-json"] }
serde_json = "1.0.149"
strum = "0.28.0"
strum_macros = "0.28.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"
tokio-stream = "0.1.18"
tonic = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
